# cloudkitty-specs

./: .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/antelope/: add_start_end_for_rating_rules.rst
specs/flamingo/: add_v2_storage_driver_for_loki.rst
specs/gazpacho/: add_aetos_collector.rst
specs/ocata/: placeholder.rst
specs/pike/: placeholder.rst
specs/stein/: add_source_to_state_management.rst  adding_a_v2_api_to_cloudkitty.rst  refactoring_cloudkittys_documentation.rst  reworking_prometheus_collector.rst
specs/train/: add_dataframe_datapoint_object.rst  add_delete_method_v2_storage.rst  add_get_dataframes_api_endpoint.rst  add_get_scope_state_api_endpoint.rst  add_push_dataframes_api_endpoint.rst  add_reset_scope_state_api_endpoint.rst  add_v2_reporting_endpoint.rst  add_v2_storage_driver_elasticsearch.rst  adding_prometheus_fetcher.rst  concurrency.rst  placeholder.rst  reset_scope_state.rst  timezone_aware.rst
specs/ussuri/: add_prometheus_query_functions_to_the_collector.rst  migrate_v1_rating_modules_api_endpoints_to_v2.rst  monasca_fetcher.rst  optimize_driver_loading_in_v2_api.rst
specs/wallaby/: add_active_column_storage_states.rst  deprecate-state-field.rst
specs/yoga/: reprocessing_api.rst
