[metadata]
name = cloudkitty-specs
summary = OpenStack Cloudkitty Project Development Specs
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
